base/frontend/sourcegraph-frontend.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # We can upload large files (extensions)
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    # See
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    # for more nginx annotations.
  labels:
    app: sourcegraph-frontend
    deploy: sourcegraph
  name: sourcegraph-frontend
  namespace: workiva
spec:
  # See the customization guide (../../../docs/configure.md) for information
  # about configuring TLS
  tls:
  - hosts:
    - sourcegraph.wk-dev.wdesk.org
    secretName: default-ingress-cert
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sourcegraph-frontend
          servicePort: 30080
    # If you're using TLS/SSL, uncomment the following line and replace 'sourcegraph.example.com' with the real
    # domain that you want to use for your Sourcegraph instance.
    host: sourcegraph.wk-dev.wdesk.org
